netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-egress-airflow-worker
  namespace: team-knada-hyka
spec:
  egress:
  - ports:
    - port: 80
      protocol: TCP
    to:
    - ipBlock:
        cidr: 169.254.169.254/32 # metadata server
  - ports:
    - port: 443
      protocol: TCP
    to:
    - ipBlock:
        cidr: 140.82.112.0/20 # github
    - ipBlock:
        cidr: 173.194.0.0/16 # google
    - ipBlock:
        cidr: 66.102.0.0/20 # google
    - ipBlock:
        cidr: 74.125.0.0/16 # google
    - ipBlock:
        cidr: 64.233.160.0/19 # google
    - ipBlock:
        cidr: 142.250.0.0/15 # google
  - ports:
    - port: 53
      protocol: UDP
    - port: 53
      protocol: TCP
  - ports:
    - port: 5432
      protocol: TCP
    to:
    - podSelector:
        matchLabels:
          app: cloudsql-proxy
  podSelector:
    matchLabels:
      component: worker
      release: airflow
  policyTypes:
  - Egress
